fix(LoginPage): margin was too short

--- a/src/pages/LoginPage/LoginPage.styles.scss
+++ b/src/pages/LoginPage/LoginPage.styles.scss
@@ -29,7 +29,7 @@
     .login-page__forgot {
         font-size: 14px;
         margin-top: 15px;
-        margin-bottom: 15px;
+        margin-bottom: 25px;
         color: #1976d2;
     }
 
